# coursework_6

./: .env.exemple  blog_data.json  coursework_data.json  pyproject.toml  user_data.json
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_is_public.py  0003_blog_slag_blog.py  0004_remove_blog_slag_blog_blog_slug.py  0005_alter_blog_options.py  0006_alter_blog_body.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  general_page.html
config/: settings.py  urls.py
coursework/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
coursework/management/commands/: send_mail.py
coursework/migrations/: 0001_initial.py  0002_mailingfrequency_mailingstatus_mailing_enable_and_more.py  0003_alter_mailing_client_alter_mailing_date_and_time_and_more.py  0004_attempt_date_and_time.py  0005_alter_mailing_options.py  0006_client_created_user_mailing_created_user_and_more.py
coursework/templates/coursework/: attempt_list.html  base.html  client_confirm_delete.html  client_form.html  client_list.html  first_page.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
coursework/templatetags/: my_tags.py
user/: forms.py  models.py  urls.py  views.py
user/management/commands/: csu.py
user/migrations/: 0001_initial.py  0002_alter_user_options_user_is_blocking.py
user/templates/user/: login.html  pass_change.html  reset_pass.html  (+4 more)
(+1 files in other folders)
